# aiclipper-yt

./: .env.example  .gitignore  README.md  get-pip.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.zed/: settings.json
app/: __init__.py  cli.py  config.py  constants.py  downloader.py  extraction.py  layout.py  logging.py  main.py  postprocess.py  prefilter.py  subtitles.py  transcription.py  utils.py
app/api/: router.py
app/api/routes/: health.py
app/core/: __init__.py
app/llm/: __init__.py  analysis.py  backends.py  fix_clips.py  prompts.py
app/llm/backends/: __init__.py  client.py  json_parser.py  openrouter.py  retry.py
app/llm/config/: __init__.py  config.py
app/llm/modules/: __init__.py  _llm_helpers.py  chunking.py  scoring.py  validation.py
app/llm/prompts/: __init__.py  system_prompt.py
docs/: PRD.md  TASKLIST.md  TEKNIKAL.md
tests/: conftest.py
tests/unit/: test_extraction.py  test_llm_analysis.py  test_llm_analysis_simple.py  test_prefilter.py  test_subtitles.py  test_transcription.py
