[project]
name = "aiclip-app"
version = "0.2.0"
description = "AI-powered video clipping tool with Layout Mode System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper",
  "openai",
  "anthropic",
  "requests",
  "opencv-python-headless",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "jinja2>=3.1.0",
  "aiofiles>=23.2.1",
]

[project.scripts]
aiclip = "app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/utils.py" = ["E501"]
"app/llm/fix_clips.py" = ["E501"]
"app/llm/prompts.py" = ["E501"]
"app/cli.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
